[project] 
name = "gptcli"
version = "1.0.11"
description = "Command-line interface for ChatGPT and Claude"
authors = [{name = "Val Kharitonov", email = "val@kharvd.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["cli", "command-line", "assistant", "openai", "claude", "cohere", "gpt-3", "gpt-4", "llm", "chatgpt", "gpt-cli", "anthropic", "gpt-client", "anthropic-claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic~=0.39.0",
    "attrs~=23.2.0",
    "black~=24.10.0",
    "cohere~=5.11.4",
    "google-generativeai==0.7.2",
    "openai~=1.54.4",
    "prompt-toolkit~=3.0.48",
    "pytest~=8.3.3",
    "PyYAML>=6.0.1",
    "rich~=13.7.1",
    "typing_extensions>=4.10.0",
    "pydantic<2",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python==0.2.74",
]

[project.urls]
"Homepage" = "https://github.com/kharvd/gpt-cli"

[project.scripts]
gpt = "gptcli.gpt:main"

[build-system]
requires = ["pip>=23.0.0", "setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Add this section to specify the packages to include
[tool.setuptools.packages.find]
where = ["."]
include = ["gptcli", "gptcli.*"]
